ruumis kuva kansiointi

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header{
 }
 
 .ruumis{
-    background-image: url(../img/BODY.jpg);
+    background-image: url(/SPACE22/img/BODY.jpg);
    
   
     background-position: bottom;
