--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header{
     background-size: cover;
     position: sticky;
     top: 0px;
+    z-index: 100;
 }
 .logo{
     font-family: "Segoe UI", Arial, Helvetica, sans-serif;
@@ -47,6 +48,7 @@ header{
     background-color: white;
     position: sticky;
     top: 107px;
+    z-index: 100;
 }
 
 .sticky-nav a{
@@ -58,11 +60,16 @@ header{
 
 .ruumis{
     background-image: url(/SPACE22/img/BODY.jpg);
-   
-  
     background-position: bottom;
     background-size: cover;
-    min-height: 100vh
+    min-height: 100vh;
+    
+    transition: background 5s
+}
+.artikkeli{
+    color: black;
+    text-decoration: none;
+
 }
 .main{
     
@@ -76,7 +83,11 @@ header{
     margin: 30px auto;
     width: 890px;
     text-align: center;
+    
 
+}
+.all-nasa:hover{
+    opacity: 1;
 }
 .all-nasa{
     font-family: "Segoe UI", Arial, Helvetica, sans-serif;
@@ -84,14 +95,64 @@ header{
     background-color: rgb(235, 235, 235);
     border-radius: 20px;
     padding: 5px;
+    opacity: 0.7;
+    transition: opacity 0.5s;
 }
 
 .all-nasa h4{
     text-transform: uppercase;
 }
+
+.all-nasafull{
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: rgb(235, 235, 235);
+    border-radius: 20px;
+    padding: 5px;
+
+    
+}
+
+.all-nasafull h4{
+    text-transform: uppercase;
+}
+
 .Nasa1{
    grid-area: Nasa1;
 }
+
+.Nasa1full{
+    display: grid;
+    grid-template-columns: auto ;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'Nasa1full';
+    grid-gap: 0px;
+    margin: 30px auto;
+    width: 890px;
+    text-align: center;
+
+    
+}
+.artikkelifull {
+    font-size: 30px;
+    text-align: center
+}
+.artikkelinteksti{
+    font-size: 17px;
+    text-align: left;
+    padding: 0 60px 20px 60px;
+    
+}
+    /*KUVA*/
+    .frontpicfull{
+        width: 900px;
+        border-radius: 20px 20px 0 0;
+        margin: -5px;
+        
+    }
+
+
 .Nasa2{
     grid-area: Nasa2;
     height: 380px;
@@ -117,4 +178,36 @@ header{
     width: 250px;
     border-radius: 20px 20px 0 0;
     margin: -5px;
+}
+
+.LEHDET{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 180px;
+    grid-gap: 30px;
+    width: 890px;
+    margin: 40px auto;
+
+}
+.julkaisut{
+    background-color: rgb(235, 235, 235);
+    border-radius: 20px;
+    opacity: 0.7;
+    transition: opacity 0.5s;
+
+}
+.julkaisut:hover{
+    opacity: 1;
+
+}
+.LEHTIpic{
+    float: left;
+    height: 180px;
+    border-radius: 20px 0 0 20px;
+}
+
+.Lehtitekstit{
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+    padding: 20px 10px 20px 300px;
+   
 }
