--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header{
     position: sticky;
     top: 0px;
     z-index: 100;
+    height: 107px;
 }
 .logo{
     font-family: "Segoe UI", Arial, Helvetica, sans-serif;
@@ -59,12 +60,12 @@ header{
 }
 
 .ruumis{
-    background-image: url(/SPACE22/img/BODY.jpg);
+    background-image: url(../img/BODY.jpg);
     background-position: bottom;
     background-size: cover;
     min-height: 100vh;
     
-    transition: background 5s
+    transition: background 3s
 }
 .artikkeli{
     color: black;
@@ -193,7 +194,7 @@ header{
     background-color: rgb(235, 235, 235);
     border-radius: 20px;
     opacity: 0.7;
-    transition: opacity 0.5s;
+    transition: 0.5s;
 
 }
 .julkaisut:hover{
